added styling with bootstrap and custom styling for the components

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="utf-8" />
   <title>CommonJS React Skeleton</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 </head>
 
 <body>
-  <div id="ingredient"></div>
+  <div class="container">
+    <div class="row">
+      <div id="ingredient"></div>
+      <div id="todo"></div>
+      <div id="eidday"></div>
+    </div>
+  </div>
+
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
