--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>CommonJS React Skeleton</title>
+  <title>Product Shop</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div id="ingredient"></div>
-      <div id="todo"></div>
-      <div id="eidday"></div>
+      <div id="main"></div>
     </div>
   </div>
 
